Modified text in about.html

--- a/npactweb/npactweb/templates/about.html
+++ b/npactweb/npactweb/templates/about.html
@@ -23,7 +23,7 @@
 <p>	number: A unique identification number followed by:</p>
 <p>	'-', if significance does not reach global threshold (less strong contrast).</p>
 <p>	'*', if ignificance reaches global threshold (stronger contrast).</p>
-<p>	Y is an upper or lower case character describing the predicted start-of-translation codon. Upper case indicates that the predicted codon is within 15 codons of the start of the hit, lower case indicates that it is more distant. The potential start-of-translation codons looked for are, in the order:</p>
+<p>	[A/a/G/g/T/t/C/c/W/w] is an upper or lower case character describing the predicted start-of-translation codon. Upper case indicates that the predicted codon is within 15 codons of the start of the hit, lower case indicates that it is more distant. The potential start-of-translation codons looked for are, in the order:</p>
 <list>
 <p>		ATG (A/a) or GTG (G/g)</p>
 <p>		TTG (T/t)</p>
