Use taskqueue on the website
Now the main processing requests for the website are done through the
taskqueue. Still kind of barebones with no progress reporting but a
good step in the right direction.

--- a/npactweb/npactweb/templates/processing.html
+++ b/npactweb/npactweb/templates/processing.html
@@ -62,7 +62,7 @@
 
   <script type="text/javascript">
     jQuery(document).ready( function(){ 
-      progress.init("{{ path }}"); 
+      progress.init("{{ statusurl }}"); 
     });
   </script>
 </div>
