Formatting on the start template for the email box.

--- a/npactweb/npactweb/templates/start.html
+++ b/npactweb/npactweb/templates/start.html
@@ -48,9 +48,9 @@
       {% endif %}
       {% endfor %}
     </div>
+<br/>
     <p>
-      Email me the results
-      {{ form.email }}
+      Email me the results @ {{ form.email }} (optional) 
     </p>
     <button class="Start" type="submit" name="action" value="run" 
             title="Get the analysis results based on default configuration.">
