--- a/npactweb/npactweb/templates/processing.html
+++ b/npactweb/npactweb/templates/processing.html
@@ -19,31 +19,35 @@
 
       <h4>Downloads</h4>
 
-      <div id="graphicalresults" style="display:none;" class="ui-state-highlight">
-        <div class="ui-icon ui-icon-info" style="float:left;" ></div>
+      <div id="graphicalresults" class="ui-state-highlight ui-corner-all onsuccess">
+        <div class="ui-icon ui-icon-info"></div>
         <p>
           The graph is now ready <a id="downloadlink" href="#" target="_blank">Click Here</a> to view.
         </p>
       </div>
-      <div id="predictionresults" style="display:none;" class="ui-state-highlight">
-        <div class="ui-icon ui-icon-info" style="float:left;" ></div>
+      <div id="predictionresults" style="display:none;" class="ui-state-highlight ui-corner-all">
+        <div class="ui-icon ui-icon-info"></div>
         <p>
           The prediction results are now ready:
           <ul id="files" />
         </p>
       </div>
 
-      <h4>Not what you expected?</h4>
-      <ul>
-        <li><a id="reconfigurelink" href="{{ reconfigure_url }}">Reconfigure it</a> and try again.</li>
-        <li><a href="{% url start %}">Start Over</a></li>
-      </ul>
       {% if email %}
-      <div id="emailsent" style="display:none;">
+      <div id="emailsent" class="onsuccess">
         <h4>Email results</h4>
         <p>A link to this results page was sent to <tt>{{email}}</tt>.</p>
       </div>
       {% endif %}
+
+      <div id="tryagain" class="onsuccess">
+          <h4>Not what you expected?</h4>
+          <ul>
+            <li><a id="reconfigurelink" href="{{ reconfigure_url }}">Reconfigure it</a> and try again.</li>
+            <li><a href="{% url start %}">Start Over</a></li>
+          </ul>
+      </div>
+
     </div>
   </div>
 
@@ -51,9 +55,9 @@
 
   <div id="progressreport">
     <h3 > Status </h3>
-    <div id="computationerred" class="ui-state-error ui-corner-all" style="display:none">
+    <div id="computationerred" class="ui-state-error ui-corner-all onerror">
       <p>
-        <span style="" class="ui-icon ui-icon-alert"></span>
+        <span class="ui-icon ui-icon-alert"></span>
         There was an error. You can click refresh to try again,
         <a href="{{ reconfigure_url }}">reconfigure this report</a>,
         or return to the <a href="{% url start %}">start</a>.
@@ -62,12 +66,13 @@
 
     <div id="computationrunning" class="ui-state-highlight">
       <img src="{% media_url "images/spinner.gif" %}" class="spinner"/>
-      <p id="currentstep">N-PACT is: <span id="currentstepdesc">Parsing GenBank file.</span></p>
+      <p id="currentstep">N-PACT is: <span id="currentstepdesc">Starting</span></p>
     </div>
     {% if email %}
     <p>An email link to the results will be sent to <tt>{{email}}</tt>. You may leave this page at any time and return via that link.</p>
     {% endif %}
   </div>
+
 
   <script type="text/javascript">
     jQuery(document).ready( function(){
