Hide results title too.

--- a/npactweb/npactweb/templates/processing.html
+++ b/npactweb/npactweb/templates/processing.html
@@ -13,7 +13,7 @@
 
 <div id="progress" class="contentPadding">
 
-  <div id="results" >
+  <div id="results" style="display:none;">
     <h3>Results </h3>
     <div>
 
@@ -25,7 +25,7 @@
           The graph is now ready <a id="downloadlink" href="#" target="_blank">Click Here</a> to view.
         </p>
       </div>
-      <div id="predictionresults" style="display:none;" class="ui-state-highlight ui-corner-all">
+      <div id="predictionresults" class="ui-state-highlight ui-corner-all">
         <div class="ui-icon ui-icon-info"></div>
         <p>
           The prediction results are now ready:
