Fix spat -> npact on 404 page.

--- a/npactweb/npactweb/templates/404.html
+++ b/npactweb/npactweb/templates/404.html
@@ -4,7 +4,7 @@
 
 {%block content %}
 <div class="contentPadding">
-  <h2>S-P.A.T. Missing Page</h2>
+  <h2>NPACT Missing Page</h2>
   <p>We're sorry but that page is no longer here. Perhaps you'd like to visit the <a href="{% url index %}">Home Page</a> or <a href="{% url start %}">start a new analysis</a>.</p>
 
   <p>If you think the page really should be here please submit an error report.</p>
