Jesse's stylistic improvements
Jesse took a pass over it and looks much better, but I want to
integrate his changes into the jquery-ui themeroller.

This commit is so that it is recorded and I don't mess anything up

--- a/npactweb/npactweb/templates/config.html
+++ b/npactweb/npactweb/templates/config.html
@@ -50,13 +50,14 @@
   <h2>N-Profile Analysis Options</h2>
   <p>From here you can customize the options on an N-Profile analysis.</p>
 
-
+<div id="form-container">
   <form method="POST">
     {% csrf_token %} 
-    <table>
+    <table id="n-config-options">
     {{ form.as_table }}
     </table>
     <p><button type="submit">Get Analysis!</button></p>
   </form>
+  </div>
 </div>
 {%endblock content %}
