--- a/npactweb/npactweb/templates/start.html
+++ b/npactweb/npactweb/templates/start.html
@@ -20,11 +20,12 @@
 {%block content %}
 <div class="contentPadding">
   <h2>NPACT - N-Profile Analysis Computational Tool (Prokaryotes)</h2>
+  <img src="{% url start %}devassets/images/dna.jpg" alt="N-Profile Genbank Analysis Computational Tool image" style="margin:0 0 5px 8px;" />
   <p>For quantitative frame-analysis and <b> prokaryotic gene </b> prediction from a sequence file in the Genbank format (see a <a href="http://www.ncbi.nlm.nih.gov/Sitemap/samplerecord.html">sample record</a> or the <a href="{% url about %}">About</a> page).</p>
   <p>After seleting a sequence file, "Start Analysis!" will result in a graphical output showing sequence compositional contrasts for frame analysis, gene annotation (when available), and, by default, regions of non-random compositional contrast (hits), gene predictions, and corresponding output text files. Parameters can be modified using "Configure Analysis", which leads to a page where the user can choose which nucleotide type(s) to represent for frame analysis, start and end position of the analysis, and level of significance of high scoring segments (hits). From this page the user can also disable identification of high-scoring segments and new gene predictions altogether, in which case N-PACT will only produce the graph of frame-specific nucleotide content and positions of genes annotated in the input file. </p>
 
-  <p>The NPACT server can process uploaded files, files fetched from a url, or
-    genbank data pasted directly in. Only one of the  following is neccessary</p>
+  <p class="orange-text">The NPACT server can process uploaded files, files fetched from a url, or
+    genbank data pasted directly in. <strong>Only one of the  following is neccessary</strong>.</p>
 
   <input type="hidden" name="selected" value="" id="selected"/>
   <form method="post" action="{% url start %}" enctype="multipart/form-data">
@@ -49,8 +50,8 @@
       {% endfor %}
     </div>
 <br/>
-    <p>
-      Email me the results @ {{ form.email }} (optional) 
+    <p class="blue-text" style="padding-left:15px;">
+      <strong style="font-size:15px;">Email me the results @</strong> {{ form.email }} (optional) 
     </p>
     <button class="Start" type="submit" name="action" value="run" 
             title="Get the analysis results based on default configuration.">
@@ -62,8 +63,8 @@
     </button>
   </form>
   <br/>
-  <p>
-    <a href="">Start Over</a>
+  <p id="start-over">
+    <a href="">&laquo; Start Over</a>
   </p>
 </div>
 {%endblock content %}
