--- a/npactweb/npactweb/templates/processing.html
+++ b/npactweb/npactweb/templates/processing.html
@@ -66,7 +66,7 @@
 
     <div id="computationrunning" class="ui-state-highlight">
       <img src="{% media_url "images/spinner.gif" %}" class="spinner"/>
-      <p id="currentstep">N-PACT is: <span id="currentstepdesc">Starting</span></p>
+      <p id="currentstep">N-PACT is: <span id="currentstepdesc">Initializing</span></p>
     </div>
     {% if email %}
     <p>An email link to the results will be sent to <tt>{{email}}</tt>. You may leave this page at any time and return via that link.</p>
