Make the main pdf download result bolded on results page.

--- a/npactweb/npactweb/templates/processing.html
+++ b/npactweb/npactweb/templates/processing.html
@@ -22,7 +22,7 @@
       <div id="graphicalresults" class="ui-state-highlight ui-corner-all onsuccess">
         <div class="ui-icon ui-icon-info"></div>
         <p>
-          The graph is now ready <a id="downloadlink" href="#" target="_blank">Click Here</a> to view.
+          The graph is now ready <a id="downloadlink" href="#" target="_blank">Click Here to view</a>.
         </p>
       </div>
       <div id="predictionresults" class="ui-state-highlight ui-corner-all">
