--- a/npactweb/npactweb/static/css/style.css
+++ b/npactweb/npactweb/static/css/style.css
@@ -369,6 +369,7 @@ button.Start { clear:both; margin: 8px;}
 #results h3 {color:#0021A5;margin-left:4px;}
 #results h4 {color:#FF4A00;margin-left:14px;}
 #graphicalresults {border:none;}
+#graphicalresults a {font-weight: bold;}
 
 .ui-state-highlight { margin-top:10px; padding:10px; width:94%; }
 	.ui-state-highlight p {color:#000;}
