--- a/npactweb/npactweb/templates/base.html
+++ b/npactweb/npactweb/templates/base.html
@@ -44,7 +44,7 @@
             <li {%if resolved.view_name == 'about' %}id="active"{%endif%} >
               <a href="{% url about %}">About</a>
             </li>
-            <li><a href="">Get the Source</a></li>
+            <li><a href="">Downloads</a></li>
           </ul>
         </div>
         <div id="related">
@@ -56,8 +56,8 @@
           </ul>
           <h4>People</h4>
           <ul>
-            <li><a href="http://www.mgm.ufl.edu/brocchieri/index.html">Luciano Brocchieri (PI)</a></li>
-            <li><a href="#">Steve M. Oden (Graduate student)</a></li>
+            <li><a href="http://brocchieri.mgm.ufl.edu/">Luciano Brocchieri (PI)</a></li>
+            <li><a href="#">Steve M. Oden (Postdoctoral student)</a></li>
             <li><a href="#">Eric Hernandez (Programmer)</a></li>
           </ul>
           {% include "_includes/search.html" %}
