--- a/npactweb/npactweb/templates/about.html
+++ b/npactweb/npactweb/templates/about.html
@@ -25,10 +25,10 @@
 <p>	<b>####</b>: A unique identification number followed by:</p>
 <p>	<b>[-/*]</b> identifies the E-value:</p>
 <list>
-<p>	<b>'-'</b>, if E-value > 0.01 (weaker compositional periodicity).</p>
-<p>	<b>'*'</b>, if E-value >= 0.01 (stronger compositional periodicity).</p>
+<p>	<b>'-'</b>: E-value > 0.01 (weaker compositional periodicity).</p>
+<p>	<b>'*'</b>: E-value >= 0.01 (stronger compositional periodicity).</p>
 </list>
-<p>	<b>[A/a/G/g/T/t/C/c/W/w]</b> is an upper- or lower-case character indicating the potential start-of-translation codon closest to the 5'-end of the hit. Upper case indicates that the predicted codon is within 15 codons of the start of the hit (and up to three codons within the hit), lower case indicates that it is more distant. The potential start-of-translation codons considered are, in the order:</p>
+<p>	<b>[A/a/G/g/T/t/C/c/W/w]</b> indicates the potential start-of-translation codon closest to the 5'-end of the hit. Upper case indicates that the predicted codon is within 15 codons of the start of the hit (and up to three codons within the hit), lower case indicates that it is more distant. The potential start-of-translation codons considered are, in the order:</p>
 <list>
 <p>		ATG (A/a) or GTG (G/g)</p>
 <p>		TTG (T/t)</p>
