Edited text in about.html

--- a/npactweb/npactweb/templates/about.html
+++ b/npactweb/npactweb/templates/about.html
@@ -41,7 +41,7 @@
 </list>
 
 <h4>Coloring Scheme</h4>
-<p>The coloring scheme used throughout the graphical output follows the following rules. The nucleotide sub-sequences starting, respectively, from position 1, 2 or 3 of the sequence - composed of positions (<it>i</it> mod 3) where <it>i</it> = 1, 2 or 3 - are colored in red (R), green (G), and blue (B), respectively. Annotated genes, newly predicted genes, and high-scoring segments, are colored as the sub-sequence in phase with their third codon positions. An alternative coloring scheme is available.</p>
+<p>The coloring scheme used throughout the graphical output follows the following rules. The nucleotide sub-sequences starting, respectively, from position 1, 2 or 3 of the sequence - composed of positions (<it>i</it> mod 3) where <it>i</it> = 1, 2 or 3 - are colored in red (R), green (G), and blue (B), respectively. Annotated genes, newly identified ORFs, and high-scoring segments, are colored as the sub-sequence in phase with their third codon positions. An alternative coloring scheme is available.</p>
 </div>
 
 {%endblock content %}
