--- a/npactweb/npactweb/templates/base.html
+++ b/npactweb/npactweb/templates/base.html
@@ -44,7 +44,7 @@
             <li {%if resolved.view_name == 'about' %}id="active"{%endif%} >
               <a href="{% url about %}">About</a>
             </li>
-            <li><a href="{% url downloads %}">Downloads</a></li>
+            <li><a href="http://compbio.ufl.edu/software/npact/">Downloads</a></li>
           </ul>
         </div>
         <div id="related">
