--- a/npactweb/npactweb/templates/about.html
+++ b/npactweb/npactweb/templates/about.html
@@ -6,7 +6,7 @@
 <div class="contentPadding">
 <h2 id="secHeader" title="NPACT - About"><span><!--header image here--></span>NPACT About</h2>
 <p></p><h4>About</h4>
-<p>NPACT is a computational and graphical representation tool for gene identification and sequence annotation. NPACT identifies sequence segments of any length with <b>statistically-significant 3-base compositional periodicities</b> and are <b>associated with ORF structures</b> (<a href="">Oden and Brocchieri 2014</a>, submitted). It uses a new quantitative approach that extends the principle of visual frame analysis (<a href="http://www.sciencedirect.com/science/article/pii/0378111984901161">Bibb et al. 1984</a>).</p>
+<p>NPACT is a computational and graphical representation tool for gene identification and sequence annotation. NPACT identifies sequence segments of any length with <b>statistically-significant 3-base compositional periodicities</b> and <b>associated with ORF structures</b> (<a href="">Oden and Brocchieri 2014</a>, submitted). It uses a new quantitative approach that extends the principle of visual frame analysis (<a href="http://www.sciencedirect.com/science/article/pii/0378111984901161">Bibb et al. 1984</a>).</p>
 
 <p>The NPACT server produces a multi-page graphical output representing, along sequence positions, frame-specific GC content (or optionally content of any nucleotide combination) for frame analysis (<a href="http://www.bioinformatika.pbf.hr/Articles/FramePlot.pdf">Ishikawa and Hotta 1999</a>; <a href="http://www.ncbi.nlm.nih.gov/pubmed/15919911">Brocchieri et al. 2005</a>), published gene annotations (when available), hits, and newly identified ORFs with 3-base compositional periodicities.</p>
 
