Ability to delete library files
We've got some downloaded files that are bad that we need to clear out.

--- a/npactweb/npactweb/templates/management.html
+++ b/npactweb/npactweb/templates/management.html
@@ -36,6 +36,10 @@
         <button type="submit" name="action" value="cleanup">Run Cleanup</button>
       </p>
     </div>
+    <div>
+      <label>Cleanout library:</label>
+      <button type="submit" name="action" value="clear-library">Clear Library</button>
+    </div>
   </form>
 
 </div>
